# ai_newsletter

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  routes.py
app/agents/: news_extractor.py  newsletter_generator.py
app/templates/: index.html
app/tools/: news_extractor.py
