[project]
name = "ai_newsletter"
version = "0.1.0"
description = "AI Agents for automated news processing"
authors = [{name = "Shubham Shah", email = "shubhamshah207@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygooglenews>=0.1.0",
    "markdown>=3.4",
    "linkedin-api==2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
